[UIK-94-UIK-95]-Automate course generation with predefined prompt