@@ -5,6 +5,7 @@ import org.smartlearnai.model.Course;
 import org.smartlearnai.model.Lesson;
 import org.smartlearnai.model.dto.CourseDto;
 import org.smartlearnai.model.dto.LessonDto;
+import org.smartlearnai.model.exeptions.ResourceNotFoundException;
 import org.smartlearnai.repository.CourseRepository;
 import org.smartlearnai.service.CourseService;
 import lombok.RequiredArgsConstructor;
@@ -12,6 +13,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,47 +24,33 @@ public class CourseServiceImpl implements CourseService {
 
     @Override
     public CourseDto generateCourse(String title, String description, String promptUsed, List<LessonDto> lessonDTOs) {
-        LessonDto lesson1 = LessonDto.builder()
-                .id(1L)
-                .title("Lesson 1: Intro to AI")
-                .content("Artificial Intelligence is a branch of computer science...")
-                .orderInCourse(1)
-                .build();
-
-        LessonDto lesson2 = LessonDto.builder()
-                .id(2L)
-                .title("Lesson 2: History of AI")
-                .content("AI dates back to the 1950s with pioneers like Turing...")
-                .orderInCourse(2)
-                .build();
-
-        return CourseDto.builder()
-                .id(999L)
-                .title(title)
-                .description(description)
-                .promptUsed(promptUsed)
-                .hasQuiz(true)
-                .lessons(List.of(lesson1, lesson2))
-                .build();
-       /* Course course = Course.builder()
+        Course course = Course.builder()
                 .title(title)
                 .description(description)
                 .promptUsed(promptUsed)
                 .hasQuiz(true)
                 .build();
 
-        List<Lesson> lessons = lessonDTOs.stream()
-                .map(dto -> Lesson.builder()
-                        .title(dto.getTitle())
-                        .content(dto.getContent())
-                        .orderInCourse(dto.getOrderInCourse())
-                        .course(course)
-                        .build())
-                .toList();
+        List<Lesson> lessons = lessonDTOs.stream().map(lessonDto -> {
+            Lesson lesson = new Lesson();
+            lesson.setTitle(lessonDto.getTitle());
+            lesson.setContent(lessonDto.getContent());
+            lesson.setCourse(course);
+            return lesson;
+        }).collect(Collectors.toList());
 
         course.setLessons(lessons);
-        Course saved = courseRepository.save(course);
-        return modelMapper.map(saved, CourseDto.class);*/
+
+        courseRepository.save(course);
+
+        return CourseDto.builder()
+                .id(courseRepository.findById(course.getId()).get().getId())
+                .title(course.getTitle())
+                .description(course.getDescription())
+                .promptUsed(course.getPromptUsed())
+                .hasQuiz(true)
+                .lessons(lessonDTOs)
+                .build();
     }
 
     @Override
@@ -76,6 +64,6 @@ public class CourseServiceImpl implements CourseService {
     public CourseDto getCourseById(Long id) {
         return courseRepository.findById(id)
                 .map(course -> modelMapper.map(course, CourseDto.class))
-                .orElseThrow(() -> new RuntimeException("Course not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Course not found with id: " + id));
     }
 }
